force-app/main/default/objects/Campaign/fields/Campaign_Lead__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>