force-app/main/default/objects/Campaign/fields/Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status__c</fullName>
    <label>Campaign Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attending</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>