force-app/main/default/objects/Campaign/validationRules/NSSales_vrChildCampaignStartEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>NSSales_vrChildCampaignStartEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(ParentId)),
 OR(StartDate &lt; Parent.StartDate ,
 StartDate &gt; Parent.EndDate,
 EndDate &lt; Parent.StartDate,
 EndDate &gt; Parent.EndDate)
)</errorConditionFormula>
    <errorMessage>Please select start date and end date between the start date end date of the parent campaign</errorMessage>
</ValidationRule>